charts/tls-oauth-ingress/gateway-config.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: the-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - testauth.karofa
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - testauth.karofa
    tls:
      mode: SIMPLE
      credentialName: istio-ingress-tls
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-service
spec:
  hosts:
  - testauth.karofa
  gateways:
  - the-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: md-keycloak.md-security.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy.oauth2.svc.cluster.local
        port:
          number: 80          
  - route:
    - destination:
        host: httpbin.test-auth.svc.cluster.local
        port:
          number: 8000
