charts/tls-oauth-ingress/authorization-config-ohif.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: ohifviewer-oauth2-proxy
spec:
  selector:
    matchLabels:
#      app: istio-ingress 
       app: ohif-viewer
  action: CUSTOM
  provider:
    name: ohifviewer-proxy
  rules:
    - to:
        - operation:
            hosts: ["ohifviewer.karofa", "ohifviewer.karofa:*"]
            notPaths: ["/realms/*"]
