charts/tls-oauth-ingress/authorization-config.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: test-apps-istio-oauth2-proxy
spec:
  selector:
    matchLabels:
#      app: istio-ingress 
      app: httpbin
  action: CUSTOM
  provider:
    name: test-apps-istio-proxy
  rules:
    - to:
        - operation:
            hosts: ["test-apps-istio.karofa", "test-apps-istio.karofa:*"]
            notPaths: ["/realms/*"]
